// Vitest Snapshot v1

exports[`mount component > renders empty list 1`] = `
"<div class=\\"items\\">
  <h1>Items</h1>
  <div class=\\"item-list\\">
    <h2>No items loaded =/</h2>
  </div>
</div>"
`;

exports[`mount component > renders list with three items 1`] = `
"<div class=\\"items\\">
  <h1>Items</h1>
  <div class=\\"item-list\\">
    <div class=\\"item-card\\">
      <div class=\\"item-card__title\\">Itamar Assumpção</div>
      <div class=\\"item-card__button\\"><button class=\\"simple-button simple-button--default simple-button--small\\">Delete</button></div>
    </div>
    <div class=\\"item-card\\">
      <div class=\\"item-card__title\\">Clara Nunes</div>
      <div class=\\"item-card__button\\"><button class=\\"simple-button simple-button--default simple-button--small\\">Delete</button></div>
    </div>
    <div class=\\"item-card\\">
      <div class=\\"item-card__title\\">Tim Maia</div>
      <div class=\\"item-card__button\\"><button class=\\"simple-button simple-button--default simple-button--small\\">Delete</button></div>
    </div>
  </div>
</div>"
`;
